--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 				<head>
 				<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 					<title>goodidea</title>
-<<<<<<< HEAD
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/scr.js" type="text/javascript"></script>
 	<script src="js/script.js"></script>
@@ -12,8 +11,8 @@
 			<div id='cssmenu'>
 <ul>
    <li class='active'><a href='#'>Home</a></li>
-   <li><a href='static/authorizationform.html'>Auto</a></li>
-   <li><a href='#'>Registration</a></li>
+   <li><a href='static/authorizationform.html'>Authoriz</a></li>
+   <li><a href='static/registr.html'>Registration</a></li>
    <li><a href='#'>Contact</a></li>
    <li><a href='#'>Products</a></li>
    <li><a href='static/about.html'>About</a></li>
@@ -23,28 +22,5 @@
 
 </div>						
 </body>
-=======
-					<link rel="stylesheet" href="C://Users/STUDENT/Zhenya.Mikin/goodidea/css/main.css">
-					<link rel="stylesheet" href="../css/main.css">
-					<style>
 					
-					</style>
-				</head>
-						<body> 
-						<a href=""> </a>
-						<a href="static/authorizationform.html"> Автоиизация</a>
-						<link rel="stylesheet" href="css/main.css">
-    <p>
-    	<a href="media/im.jpg">Открыть изображение</a>
-    </p>
-    <p>
-        <a href="media/im.png">Открыть изображение 2</a>
-    </p>
-    <p>
-        <a href="media/im.mp3">Открыть звуковой файл</a>
-    </p>
-				<p>
-			<input id="reg" type="submit" value="Регистрация"></p>
-						</body>
->>>>>>> e282eadd730f5122210fb45d513a8d55a5ad3815
 			</html>
