Добавил свою страцицу и фотку

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <li><a href='static/registr.html'>Registration</a></li>
    <li><a href='#'>Contact</a></li>
    <li><a href='#'>Products</a></li>
-   <li><a href='static/about.html'>About</a></li>
+   <li><a href='static/zhenya.html'>Z</a></li>
 </ul>
 				</div>
 <div>
