--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
-			<!Doctype html>
-			<html>
-				<head>
-				<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-					<title>goodidea</title>
-	<link rel="stylesheet" href="css/main.css">
-	<script src="js/scr.js" type="text/javascript"></script>
-	<script src="js/script.js"></script>
-				</head>
-						<body>
+<!Doctype html>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>goodidea</title>
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/menu.css">
+		<script src="js/scr.js" type="text/javascript"></script>
+		<script src="js/script.js"></script>
+	</head>
+	<body>
+		<div class="sing-left">
+			<p align="center">Реклама-left</p>
+		</div>
+		<div class="sing-right">
+			<p align="center">Реклама-right</p>
+		</div>
+		<div class="content">		
+			<div class="logo">
+				<img  class="logo" src="media/Logo.png" alt="Zhenya Mokin" >
+			</div>
 			<div id='cssmenu'>
-<ul>
-   <li class='active'><a href='#'>Home</a></li>
-   <li><a href='static/authorizationform.html'>Authoriz</a></li>
-   <li><a href='static/registr.html'>Registration</a></li>
-   <li><a href='#'>Contact</a></li>
-   <li><a href='#'>Products</a></li>
-   <li><a href='static/zhenya.html'>Z</a></li>
-</ul>
+				<ul>
+					<li class='active'><a href='#'>Home</a></li>
+					<li><a href='static/authorizationform.html'>Authoriz</a></li>
+					<li><a href='static/registr.html'>Registration</a></li>
+					<li><a href='#'>Contact</a></li>
+					<li><a href='#'>Products</a></li>
+					<li><a href='static/zhenya.html'>Z</a></li>
+				</ul>
+				<div class="content-center">
+					<h1>Какие преимущества вы получите сотрудничая с нами:</h1>
+						<h2>У Вас есть бизнес, но нет сайта? Не беда</h2>
+						<p>Если вложение в эксклюзивный сайт кажется Вам нецелесообразным на данном этапе бизнеса типовой сайт именно то, что нужно! Веб-студия «GoodIdea» предлагает Вам быстрый, легкий, а главное недорогой способ представить свой показать себя в глобальной сети. Мы используем различные идеи, которые адаптируются конкретно под ваш бизнес. Благодаря чему вы сможете получить большое количество новых клиентов. Типовой сайт - идеальный вариант для малого, среднего бизнеса, а также частных предпринимателей.</p>
+							<h2>Оптимизация под Google и Яндекс</h2>
+							<p>При создании сайта наша веб-студия проводит все необходимые манипуляции, направленные на оптимизацию для поисковых систем. По этой причине ваш сайт гораздо быстрее попадет в топ поисковой выдачи и его будет легче продвигать в дальнейшем.</p>
+								<h2>Заслужите доверие клиентов!</h2>
+								<p>Каждая современная компания на определенном этапе задумывается о создании сайта, чтобы завоевать доверие клиентов и достигнуть нового уровня. Сайт будет лицом вашей компании, потому к процессу создания сайта и его дальнейшем обслуживанию стоит относится очень серьезно.</p>
+									<h2>Возьмем сайт на обслуживание</h2>
+									<p>Если у Вас нет времени на обновление информации существующего сайта мы с радостью поможем Вам в этом! Дальнейшая поддержка сайта очень важна, ведь именно она обеспечивает постоянную работоспособность ресурса, а также оперативное обновление новостей, товаров, прайс-листов Вашей фирмы.</p>
 				</div>
-<div>
+			</div>
+			
+		</div>
+	</body>
 
-</div>						
-</body>
-					
-			</html>
+</html>
