add 3 foto, sho.css/ mod. zhenya.html

--- a/static/zhenya.html
+++ b/static/zhenya.html
@@ -4,22 +4,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Zhenya</title>
 <link rel="stylesheet" href="../css/main.css">
+<link rel="stylesheet" href="../css/cho.css">
 </head>
 <body>
-<div class="centerD">
-<img  class="Zhe" src="../media/Zhe.png" alt="Zhenya Mokin"">
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-
-
-</div>						
+		<div class="hex" style="background-image: url(../media/sasha.jpg);">		
+			<a href="#"></a>	
+		</div>
+		<div class="hex" style="background-image: url(../media/evgen.jpg);">		
+			<a href="#"></a>		
+		</div>	
+		<div class="hex" style="background-image: url(../media/vadim.jpg);">		
+			<a href="#"></a>				
+		</div>			
 </body>
 					
 			</html>
