add reg add odbdown list

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 					<li><a href='static/registr.html'>Registration</a></li>
 					<li><a href='#'>Contact</a></li>
 					<li><a href='#'>Products</a></li>
-					<li><a href='static/zhenya.html'>Z</a></li>
+					<li><a href='static/zhenya.html'>Abaut</a>
+					</li>
 				</ul>
 				<div class="content-center">
+				<img src="media/tuda.png" alt="Mountain View">
 					<h1>Какие преимущества вы получите сотрудничая с нами:</h1>
 						<h2>У Вас есть бизнес, но нет сайта? Не беда</h2>
 						<p>Если вложение в эксклюзивный сайт кажется Вам нецелесообразным на данном этапе бизнеса типовой сайт именно то, что нужно! Веб-студия «GoodIdea» предлагает Вам быстрый, легкий, а главное недорогой способ представить свой показать себя в глобальной сети. Мы используем различные идеи, которые адаптируются конкретно под ваш бизнес. Благодаря чему вы сможете получить большое количество новых клиентов. Типовой сайт - идеальный вариант для малого, среднего бизнеса, а также частных предпринимателей.</p>
