--- a/static/zhenya.html
+++ b/static/zhenya.html
@@ -3,19 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Zhenya</title>
-<link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="../css/cho.css">
 </head>
 <body>
-		<div class="hex" style="background-image: url(../media/sasha.jpg);">		
-			<a href="#"></a>	
-		</div>
-		<div class="hex" style="background-image: url(../media/evgen.jpg);">		
-			<a href="#"></a>		
-		</div>	
-		<div class="hex" style="background-image: url(../media/vadim.jpg);">		
-			<a href="#"></a>				
-		</div>			
+	<div class="dro">
+  <button class="dow">Какаето кнопка</button>
+  <div class="drop-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>	
 </body>
 					
 			</html>
